# rust-devcontainers

./: .gitignore  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
INFO/: Cache-Busting-images.txt  Docker-Volume-2.txt  Docker-Volume-info.txt  Pipeline.txt  cornucopia.txt  pipeline-index_ts.txt  psql.txt
crates/asset-pipeline/: Cargo.toml  build.rs  index.ts  package-lock.json  package.json
crates/asset-pipeline/components/: hello_world.ts
crates/asset-pipeline/src/: lib.rs
crates/axum-server/: Cargo.toml
crates/axum-server/src/: config.rs  errors.rs  main.rs
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/migrations/: 20230704181629_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: layout.rs  lib.rs  users.rs
others/: Dioxus.txt  Dioxus_users.txt  axum.txt  mold.txt  psql.txt  queries.txt
